--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -1,19 +1,40 @@
-.login-signup #signUpForm {
-  text-align: left;
-  width: auto;
-  display: none;
+.signup {
+  background: #829efc;
+  width: 100%;
+  height: 700px;
 }
 
-.login-signup #signUpForm .part-one {
-  border-radius: 10px;
-  background: #e8edff !important;
+.signup h1 {
+  -webkit-transform: translateY(190px) translateX(10px);
+          transform: translateY(190px) translateX(10px);
+  font-size: 16px;
+  color: white;
+  padding: 5px;
+  position: absolute;
+}
+
+.signup h1 a {
+  color: white;
+  text-decoration: underline;
+}
+
+.signup #signUpForm {
+  text-align: left;
+  width: 100%;
+  display: block;
+  -webkit-transform: translateY(150px);
+          transform: translateY(150px);
+}
+
+.signup #signUpForm .part-one {
+  background: #bdcdff;
   width: 100%;
 }
 
-.login-signup #signUpForm .part-one .form-tag-username {
+.signup #signUpForm .part-one .form-tag-username {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -25,10 +46,10 @@
   top: 13px;
 }
 
-.login-signup #signUpForm .part-one .form-tag-first_name {
+.signup #signUpForm .part-one .form-tag-first_name {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -40,10 +61,10 @@
   top: 78px;
 }
 
-.login-signup #signUpForm .part-one .form-tag-last_name {
+.signup #signUpForm .part-one .form-tag-last_name {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -52,13 +73,13 @@
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 142px;
+  top: 146px;
 }
 
-.login-signup #signUpForm .part-one .form-tag-email {
+.signup #signUpForm .part-one .form-tag-email {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -67,13 +88,13 @@
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 205px;
+  top: 213px;
 }
 
-.login-signup #signUpForm .part-one .form-tag-password1 {
+.signup #signUpForm .part-one .form-tag-password1 {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -82,13 +103,13 @@
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 270px;
+  top: 280px;
 }
 
-.login-signup #signUpForm .part-one .form-tag-password2 {
+.signup #signUpForm .part-one .form-tag-password2 {
   font-size: 15px;
   color: #304792;
-  background: #e8edff;
+  background: #bdcdff;
   z-index: 10;
   border-radius: 5px;
   width: -webkit-max-content;
@@ -97,14 +118,14 @@
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 334px;
+  top: 345px;
 }
 
-.login-signup #signUpForm .part-one input {
+.signup #signUpForm .part-one input {
   width: 95%;
   border: 2px solid #3c54a0;
   border-radius: 4px;
-  padding: 7px;
+  padding: 8px;
   outline: none;
   font-size: 15px;
   position: relative;
@@ -112,64 +133,5 @@
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   background: white;
-}
-
-.login-signup #signUpForm .part-one button {
-  color: #0f0f0f;
-  margin-top: 25px;
-  background: white;
-  border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  border-top: 1px solid #e1e1e1;
-  font-size: 18px;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  outline: none;
-}
-
-.login-signup #signUpForm .part-one button:active {
-  background: #d7d7d7;
-}
-
-.login-signup #signUpForm .part-two {
-  border-radius: 10px;
-  background: white;
-  margin: 7px 0;
-}
-
-.login-signup #signUpForm .part-two a {
-  border-radius: 10px;
-  font-size: 18px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  font-weight: bolder;
-}
-
-.login-signup #signUpForm .part-two a:active {
-  background: #d7d7d7;
-  text-decoration: underline;
-}
-
-.login-signup #signUpForm.active {
-  display: block;
 }
 /*# sourceMappingURL=signup.css.map */
