--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -44,6 +44,7 @@
     </div>
     
 </body>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
