--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -17,6 +17,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
 
 
 
@@ -34,33 +38,29 @@
    <div class="content" id="coverContent">
       <div class="text">
          <h1><span class="moderne">Moderne</span> nettsider <br>til<br> <div class="background-overlay"></div> <span class="lave priser">lave priser</span></h1>
-      </div>
-      <div class="cover-action">
-         <button class="button-web-dev">Nettutvikling</button> 
-         <br>
-         <br>
+         <p>Nettsider designet og utviklet av Norges beste sånn at du kan få den beste tjenesten</p>
       </div>
    </div>
 </div>
 <!-- INTRO -->
 <div class="intro" id="intro">
    <h1 class="heading">Vi bygger nettsider som konverterer</h1>
-   <p>Har du en nettbutikk eller driver eget firma?<br><span class="light-overlay">Vi er her for å hjelpe deg!</span> Vi består av Norges beste designere og utviklere, og vi garanter at du vil elske nettsiden</p>
-   <br>
-   <br>
-   <h1 class="heading">Klikk for å se demo</h1>
+   <p>Har du en nettbutikk eller driver eget firma?<br><span class="light-overlay">Vi er her for å hjelpe deg!</span> Vi består av Norges beste designere og utviklere, og vi garanter at du vil elske nettsiden. Under finner du en demo for hver enkel nettside</p>
    <div class="sites">
-      {% for product in products %}
-         <div class="product-card">
-            <h1 class="product-name">{{product.name}}</h1>
-            <i class="fas fa-chevron-right"></i>
+      <div class="swiper mySwiper">
+         <div class="swiper-wrapper">
+            {% for product in products %}
+            <div class="swiper-slide">
+               <h1 class="product-name">{{product.name}}</h1>
+               <i class="fas fa-chevron-right"></i>
+            </div>
+            {% endfor %}   
          </div>
-      {% endfor %}
+       </div>
    </div>
 </div>
 <br>
 <!-- DEMO -->
-<div class="demo-slider"></div>
 <!-- CONTACT US -->
 <div class="contact-us" id="contactUs">
    <h1 class="heading">Trenger du extra hjelp?</h1>
@@ -83,4 +83,19 @@
       </div>
    </form>
 </div> 
+ <!-- Swiper JS -->
+ <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+ <!-- Initialize Swiper -->
+ <script>
+   var swiper = new Swiper(".mySwiper", {
+     slidesPerView: 2.35,
+     spaceBetween: 25,
+     freeMode: true,
+     pagination: {
+       el: ".swiper-pagination",
+       clickable: true,
+     },
+   });
+ </script>
 {% endblock %}
