--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -119,32 +119,13 @@ body{
           transform: skew(-18deg) translateY(6px) translateX(-50%);
         }
       }
-    }
-    .cover-action{
-      width: 100%;
-      height: auto;
-      position: relative;
-      top: 90px;
-      .button-web-dev{
-        padding: 10px;
-        width: 160px;
-        border-radius: 4px;
-        color: white;
-        outline: none;
-        border: none;
-        box-shadow: 1px 1px 2px white;
-        font-size: 14px;
-        border: 1px solid white;
-        background: transparent;
-        transition: .2s;
-        &:hover{
-          background: rgb(240, 240, 240);
-          color: #6e8efb;
-        }
-        &:active{
-          background: rgb(240, 240, 240);
-          color: #6e8efb;
-        }
+      p{
+        color: rgb(240, 240, 240);
+        font-size: 16px;
+        font-family: 'Alata', sans-serif;
+        line-height: 160%;
+        opacity: 0.7;
+        transform: translateY(30px);
       }
     }
   }
