--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -27,16 +27,17 @@ html, body {
     &.heading{
       padding-left: 8px;
       margin-bottom: 15px;
+      margin-top: 10px;
       width: 100%;
       font-family: 'Sniglet', cursive;
       color: black;
-      font-weight: 700;
+      font-weight: bold;
       font-size: 26px;
     }
   }
   p{
     padding-left: 8px;
-    font-size: 15px;
+    font-size: 14px;
     font-family: 'Sniglet', cursive;
     color: black;
     opacity: 0.8;
