--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -34,14 +34,15 @@
  </div>
 <!-- COVER -->
 <div class="cover" id="cover">
-   <img src="{% static '/images/covers/cover2.jpg' %}" alt="cover-1">
+   <img src="{% static '/images/covers/cover4.jpg' %}" alt="cover-1">
    <div class="content" id="coverContent">
       <div class="text">
          <h1><span class="moderne">Moderne</span> nettsider <br>til<br> <div class="background-overlay"></div> <span class="lave priser">lave priser</span></h1>
-         <p>Nettsider designet og utviklet av Norges beste sånn at du kan få den beste tjenesten</p>
+         <p>Nettsider designet og utviklet av Norges beste</p>
       </div>
    </div>
 </div>
+<br>
 <!-- INTRO -->
 <div class="intro" id="intro">
    <h1 class="heading">Vi bygger nettsider som konverterer</h1>
@@ -60,6 +61,22 @@
        </div>
    </div>
 </div>
+<br>
+<!-- PROCCESS -->
+<div class="info">
+   <h1 class="heading">Bli kjent med Webiser</h1>
+   <img src="{% static '/images/covers/cover-4.png' %}" alt="image build website pencil people purple vector">
+   <p>Webiser er en <span class="light-overlay">nettutvikling firma</span> med et stort team som består av motiverte designere og utviklere som klarer å levere på topp. Designerne sørger for at nettsiden blir akuratt som du vil, og våres utviklere sørger at nettsiden fungerer 100% som den skal. Hos Webiser bryr vi oss om kvalitet. Alle nettsider har en <span class="light-overlay">responsiv ov modern</span> desgin, og du kan bestemme selv hvordan nettsiden skal se ut.<br><span class="light-overlay">Prossen av bestilling</span> er enkelt. Du sender inn skjemaet som ligger inne <a style="text-decoration: underline;" href="/bestill">her</a>. Når du har sendt inn skjemaet vil du mota en mail når bestillingen har blitt godkjent<br><span class="light-overlay">Betaling</span> foregår via vipps når design har blitt ferdig laget, og du har bekreftet den<br>Ønsker du <span class="light-overlay">mer informasjon?</span> Les mer <a style="text-decoration: underline;" href="/om-webiser">her</a></p>
+</div>
+<!-- ECOMMERCE -->
+<div class="ecommerce">
+   <h1 class="heading">Kom i gang med en nettbutikk</h1>
+   <div class="content">
+      <img src="{% static '/images/covers/ecommerce.png' %}" alt="image ecommerce nettbutikk shop monye online shop">
+   </div>
+</div>
+<br>
+<br>
 <br>
 <!-- CONTACT US -->
 <div class="contact-us" id="contactUs">
@@ -89,13 +106,9 @@
  <!-- Initialize Swiper -->
  <script>
    var swiper = new Swiper(".mySwiper", {
-     slidesPerView: 2.35,
+     slidesPerView: 'auto',
      spaceBetween: 25,
      freeMode: true,
-     pagination: {
-       el: ".swiper-pagination",
-       clickable: true,
-     },
    });
  </script>
 {% endblock %}
