--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -11,13 +11,25 @@ body {
   background: linear-gradient(to left, rgba(202, 215, 255, 0.13));
 }
 
+.light-overlay {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  background: #d8e0ff;
+  padding: 4px;
+  border-radius: 7px;
+}
+
 .bottom-nav {
   width: 100%;
   height: 50px;
   position: fixed;
   bottom: 0;
   left: 0;
-  background: #6e8efb;
+  background: #1cd31c;
   z-index: 100;
   display: -webkit-box;
   display: -ms-flexbox;
