--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -18,19 +18,15 @@
 
 <!-- COVER -->
 <div class="cover" id="cover">
+   <img src="{% static '/images/covers/cover4.jpg' %}" alt="cover-1">
    <div class="content" id="coverContent">
       <div class="text">
-         <h1 class="maintext">kom i gang med</h1>
-         <h1 class="secondtext">bestillingen</h1>
-         <p class="cover-paragraph">Velg det som passer for deg, og våres designere vil ta kontakt med deg innen 5 timer</p>
+         <h1><span class="moderne">Kom</span> i gang <br>med<br> <div class="background-overlay"></div> <span class="lave priser">bestillingen</span></h1>
+         <p>--</p>
       </div>
-      <div class="cover-action">
-         <a href="/bestill">Bestill</a>
-         <a onclick="contact()">Kontakt oss</a>
-      </div>
-      <img src="{% static '/images/covers/cover-3.png' %}" alt="order page cover">
    </div>
 </div>
+<br>
 
 <div class="make-order">
     <form method='post' id="makeOrder" enctype="multipart/form-data">
