--- a/apps/userprofile/templates/core/signup.html
+++ b/apps/userprofile/templates/core/signup.html
@@ -37,6 +37,6 @@
             <br>
         </div> 
     </form>
-    <h1>Eller <a href="">logg inn</a></h1>
+    <h1>Eller <a href="/logg-inn">logg inn</a></h1>
 </div>
 {% endblock %}
