--- a/apps/userprofile/templates/core/login.html
+++ b/apps/userprofile/templates/core/login.html
@@ -23,7 +23,7 @@
                 <div id="signUpFormErrors">{{ form.password.errors }}</div>
             </div>
         </form>
-    <h1>Eller <a href="">lag bruker</a></h1>
+    <h1>Eller <a href="/lag-bruker">lag bruker</a></h1>
 </div>
 
 {% endblock %}
