--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -63,7 +63,7 @@ html, body {
         border-radius: 7px;
         position: relative;
         h1{
-          font-size: 15px;
+          font-size: 17px;
           color: white;
           padding-top: 10px;
         }
@@ -140,9 +140,86 @@ html, body {
     align-items: center;
     img{
       width: auto;
-      height: 210px;
+      height: 230px;
       transform: translateY(25px);
     }
+  }
+}
+// ECOMMERCE ICONS
+.icons{
+  background: transparent;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 8px;
+  text-align: center;
+  transform: translateY(60px);
+  i{
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    background: linear-gradient(135deg,#688bfc, #7996f8);  
+    font-size: 50px;
+    padding: 15px;
+    border-radius: 50px;
+    color: white;
+    width: 90px;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  p{
+    transform: translateY(7px);
+    font-size: 15px;
+    font-family: 'Sniglet', cursive;
+    color: black;
+    opacity: 0.8;
+    margin-bottom: 10px;
+  }
+}
+// PERSONAL
+.personal{
+  background: transparent;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+  .content{
+    background: #93acffa8;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+      width: auto;
+      height: 180px;
+      transform: translateY(45px);
+    }
+  }
+  h1{
+    &.heading{
+      padding-left: 8px;
+      margin-bottom: 15px;
+      margin-top: 10px;
+      width: 100%;
+      font-family: 'Sniglet', cursive;
+      color: black;
+      font-weight: bold;
+      font-size: 26px;
+    }
+  }
+  p{
+    padding-left: 8px;
+    font-size: 14px;
+    font-family: 'Sniglet', cursive;
+    color: black;
+    opacity: 0.8;
+    line-height: 230%;
+    word-spacing: 1.5px;
   }
 }
 // CONTACT US
