--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -1,13 +1,3 @@
-.cover .content img {
-  -webkit-transform: translateY(70px);
-          transform: translateY(70px);
-}
-
-.cover .content .cover-action {
-  opacity: 0;
-  pointer-events: none;
-}
-
 .make-order {
   width: 100%;
   height: auto;
@@ -42,6 +32,7 @@
 .make-order form .order-form-step1 {
   position: relative;
   padding-top: 20px;
+  background: #e8edff;
 }
 
 .make-order form .order-form-step1 h1.heading {
@@ -228,7 +219,6 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background: white;
   z-index: 1000;
   text-align: center;
   padding: 20px;
@@ -238,6 +228,7 @@
   pointer-events: none;
   -webkit-transform: translateY(-30px);
           transform: translateY(-30px);
+  background: white;
 }
 
 .make-order form .order-form-step1 .products-dropdown.active {
