--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,17 +1,6 @@
 $loader: rgb(80, 104, 180);
 
 // STANDARD PHONE
-.cover{ 
-  .content{
-    img{
-      transform: translateY(70px);
-    }
-    .cover-action{
-      opacity: 0;
-      pointer-events: none;
-    }
-  }
-}
 
 .make-order{
     width: 100%;
@@ -41,6 +30,7 @@ $loader: rgb(80, 104, 180);
           .order-form-step1{
             position: relative;
             padding-top: 20px;
+            background: #e8edff;
             h1{
               &.heading{
                 width: 100%;
@@ -189,7 +179,6 @@ $loader: rgb(80, 104, 180);
               position: absolute;
               width: 100%;
               height: 100vh;
-              background: white;
               z-index: 1000;
               text-align: center;
               padding: 20px;
@@ -197,6 +186,7 @@ $loader: rgb(80, 104, 180);
               transition: all .3s ease-in-out;
               pointer-events: none;
               transform: translateY(-30px);
+              background: white;
               &.active{
                 opacity: 1;
                 pointer-events: visible;
