--- a/static/scss/store/product.css
+++ b/static/scss/store/product.css
@@ -1,23 +1,10 @@
-.cover-mobile {
-  height: 55vh;
-  padding-bottom: 85px;
-}
-
-.cover-mobile .img {
-  -webkit-box-shadow: 0px 5px 5px #3c54a0;
-          box-shadow: 0px 5px 5px #3c54a0;
-}
-
-.cover-mobile .cover-text {
-  -webkit-transform: translateY(-60px);
-          transform: translateY(-60px);
-}
-
 .product-page {
   position: relative;
   width: 100%;
+  height: 900px;
   text-align: center;
-  background: white;
+  background: #829efc;
+  padding-top: 190px;
 }
 
 .product-page h1.heading {
@@ -28,44 +15,5 @@
   font-weight: 700;
   font-size: 26px;
   text-align: center;
-}
-
-.product-page .product-info {
-  width: 100%;
-  height: auto;
-  padding: 10px;
-  background: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.product-page .product-info h1.subject {
-  width: 100%;
-  text-transform: uppercase;
-  font-family: 'Sniglet', cursive;
-  color: #142c78;
-  font-size: 22px;
-  text-align: center;
-}
-
-.product-page .product-info .part-one {
-  width: 100%;
-}
-
-.product-page .product-info .part-one li {
-  text-align: left;
-  font-size: 14px;
-  color: #142c78;
-}
-
-.product-page .product-info .part-two {
-  width: 100%;
-}
-
-.product-page .product-info .part-two p {
-  text-align: center;
-  font-size: 14px;
-  color: #142c78;
 }
 /*# sourceMappingURL=product.css.map */
