--- a/static/scss/store/product.scss
+++ b/static/scss/store/product.scss
@@ -1,20 +1,12 @@
 // STANDARD PHONE
-.cover-mobile{ 
-    height: 55vh;
-    padding-bottom: 85px;
-    .img{
-      box-shadow: 0px 5px 5px rgb(60, 84, 160);
-    }
-    .cover-text{
-      transform: translateY(-60px);
-    }
-  }
   .product-page{
       position: relative;
       width: 100%;
+      height: 900px;
       text-align: center;
-      background: white;
-    h1{
+      background: #829efc;
+      padding-top: 190px;
+      h1{
         &.heading{
           width: 100%;
           text-transform: uppercase;
@@ -23,39 +15,6 @@
           font-weight: 700;
           font-size: 26px;
           text-align: center;
-        }
-      }
-      .product-info{
-        width: 100%;
-        height: auto;
-        padding: 10px;
-        background: white;
-        display: flex;
-        h1{
-          &.subject{
-            width: 100%;
-            text-transform: uppercase;
-            font-family: 'Sniglet', cursive;
-            color: rgb(20, 44, 120);
-            font-size: 22px;
-            text-align: center;
-          }
-        }
-        .part-one{
-          width: 100%;
-          li{
-            text-align: left;
-            font-size: 14px;
-            color: rgb(20, 44, 120);
-          }
-        }
-        .part-two{
-          width: 100%;
-          p{
-            text-align: center;
-            font-size: 14px;
-            color: rgb(20, 44, 120);
-          }
         }
       }
   }
